[gd_scene load_steps=67 format=3 uid="uid://m31rdyypcffy"]

[ext_resource type="Script" path="res://scripts/new_game.gd" id="1_fko0m"]
[ext_resource type="Texture2D" uid="uid://dor4ioqn0t4r1" path="res://assets/images/new_game/new_game.png" id="1_leeag"]
[ext_resource type="Texture2D" uid="uid://cuy53v5qcqju5" path="res://database/items/graphics/default_m/default_m.png" id="2_pw8id"]
[ext_resource type="Texture2D" uid="uid://0wic44xvowx1" path="res://assets/images/new_game/button_male.png" id="3_v6j22"]
[ext_resource type="Texture2D" uid="uid://bddfkhokjx7hw" path="res://assets/images/new_game/button_filter_rape_on.png" id="4_3ggie"]
[ext_resource type="Texture2D" uid="uid://bgn5xwxa70q36" path="res://assets/images/new_game/button_filter_feral_on.png" id="5_taquf"]
[ext_resource type="Texture2D" uid="uid://b8os1ndw1jf4a" path="res://assets/images/new_game/button_filter_gore_on.png" id="6_jiffx"]
[ext_resource type="Texture2D" uid="uid://cks071sxl8aa4" path="res://assets/images/new_game/button_start_game.png" id="7_2bohy"]
[ext_resource type="Texture2D" uid="uid://cuepwi2lwxxh0" path="res://assets/images/new_game/hover_left_t.png" id="8_vbdux"]
[ext_resource type="Texture2D" uid="uid://dvegtm2yx8m5k" path="res://assets/images/new_game/down_left_t.png" id="9_6vkio"]
[ext_resource type="Texture2D" uid="uid://bawntxteaalp6" path="res://assets/images/new_game/hover_right_t.png" id="10_6drrb"]
[ext_resource type="Texture2D" uid="uid://brqg2p7tyud7n" path="res://assets/images/new_game/down_right_t.png" id="11_nok1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iie7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lq834"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5umiu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wiswg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nwucc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0sp0j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lopjk"]
texture = ExtResource("3_v6j22")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkvrx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xshs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxv21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rp3eg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qvsvr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7w5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3rin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrr37"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwuw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kr5jv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ilofj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aiq16"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tp5n6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05alf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dc6ol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kud3n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wegrj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_707mc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25ub0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wlxmx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8mtf6"]
texture = ExtResource("4_3ggie")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y5oaa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vnxnp"]
texture = ExtResource("5_taquf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ai5fs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bqeh4"]
texture = ExtResource("6_jiffx")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jcla7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2100h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2crf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_esbb2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_edyel"]
texture = ExtResource("7_2bohy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_krs2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yl0j0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tpn18"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lfp4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_odnj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5ac8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6bnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c3jhj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1olq8"]
texture = ExtResource("8_vbdux")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7tnni"]
texture = ExtResource("9_6vkio")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wgays"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2etx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1tsdo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wigu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bsywa"]
texture = ExtResource("10_6drrb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k5ib5"]
texture = ExtResource("11_nok1t")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uleoq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fko0m")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_leeag")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 282.0
offset_top = -15.0
offset_right = 982.0
offset_bottom = 685.0
texture = ExtResource("2_pw8id")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 499.0
offset_top = 562.0
offset_right = 533.0
offset_bottom = 596.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_iie7v")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lq834")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5umiu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wiswg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nwucc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0sp0j")

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 733.0
offset_top = 562.0
offset_right = 767.0
offset_bottom = 596.0
theme_override_styles/focus = SubResource("StyleBoxTexture_lopjk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gkvrx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_lopjk")
theme_override_styles/hover = SubResource("StyleBoxTexture_lopjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6xshs")
theme_override_styles/normal = SubResource("StyleBoxTexture_lopjk")

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1123.0
offset_top = 422.0
offset_right = 1160.0
offset_bottom = 451.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_uxv21")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rp3eg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_qvsvr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f7w5v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j3rin")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mrr37")

[node name="Button2" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1122.0
offset_top = 464.0
offset_right = 1159.0
offset_bottom = 493.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_lwuw4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kr5jv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ilofj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_aiq16")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tp5n6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05alf")

[node name="Button3" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1122.0
offset_top = 509.0
offset_right = 1159.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dc6ol")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kud3n")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wegrj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_707mc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_25ub0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wlxmx")

[node name="Button4" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1160.0
offset_top = 422.0
offset_right = 1195.0
offset_bottom = 451.0
theme_override_styles/focus = SubResource("StyleBoxTexture_8mtf6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_y5oaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_8mtf6")
theme_override_styles/hover = SubResource("StyleBoxTexture_8mtf6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mtf6")
theme_override_styles/normal = SubResource("StyleBoxTexture_8mtf6")

[node name="Button5" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1160.0
offset_top = 464.0
offset_right = 1195.0
offset_bottom = 493.0
theme_override_styles/focus = SubResource("StyleBoxTexture_vnxnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ai5fs")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_vnxnp")
theme_override_styles/hover = SubResource("StyleBoxTexture_vnxnp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vnxnp")
theme_override_styles/normal = SubResource("StyleBoxTexture_vnxnp")

[node name="Button6" type="Button" parent="Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 1160.0
offset_top = 508.0
offset_right = 1195.0
offset_bottom = 537.0
theme_override_styles/focus = SubResource("StyleBoxTexture_bqeh4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jcla7")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_bqeh4")
theme_override_styles/hover = SubResource("StyleBoxTexture_bqeh4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bqeh4")
theme_override_styles/normal = SubResource("StyleBoxTexture_bqeh4")

[node name="Button7" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 858.0
offset_top = 569.0
offset_right = 1065.0
offset_bottom = 605.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_2100h")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n2crf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_esbb2")
theme_override_styles/hover = SubResource("StyleBoxTexture_edyel")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_krs2x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yl0j0")

[node name="Control3" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit" type="TextEdit" parent="Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 239.0
offset_top = 97.0
offset_right = 503.0
offset_bottom = 135.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tpn18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfp4p")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_odnj0")
text = "John"

[node name="Label" type="Label" parent="Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 255.0
offset_top = 609.0
offset_right = 295.0
offset_bottom = 654.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "40"

[node name="Label2" type="Label" parent="Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 188.0
offset_right = 293.0
offset_bottom = 233.0
theme_override_colors/font_color = Color(0.00392157, 0.6, 1, 1)
theme_override_font_sizes/font_size = 32
text = "18"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Control3"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control3/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 240.0
offset_right = 242.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 240.0
offset_right = 328.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[node name="Control2" type="Control" parent="Control3"]
anchors_preset = 0
offset_top = 46.0
offset_right = 40.0
offset_bottom = 86.0

[node name="Button" type="Button" parent="Control3/Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 240.0
offset_right = 242.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 240.0
offset_right = 328.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[node name="Control3" type="Control" parent="Control3"]
anchors_preset = 0
offset_top = 92.0
offset_right = 40.0
offset_bottom = 132.0

[node name="Button" type="Button" parent="Control3/Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 240.0
offset_right = 242.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 240.0
offset_right = 328.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[node name="Control4" type="Control" parent="Control3"]
anchors_preset = 0
offset_top = 186.0
offset_right = 40.0
offset_bottom = 226.0

[node name="Button" type="Button" parent="Control3/Control4"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 239.0
offset_right = 242.0
offset_bottom = 269.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control4"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control4"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 239.0
offset_right = 328.0
offset_bottom = 269.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[node name="Control5" type="Control" parent="Control3"]
anchors_preset = 0
offset_top = 232.0
offset_right = 40.0
offset_bottom = 272.0

[node name="Button" type="Button" parent="Control3/Control5"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 240.0
offset_right = 242.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control5"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control5"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 240.0
offset_right = 328.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[node name="Control6" type="Control" parent="Control3"]
anchors_preset = 0
offset_top = 279.0
offset_right = 40.0
offset_bottom = 319.0

[node name="Button" type="Button" parent="Control3/Control6"]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 240.0
offset_right = 242.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5ac8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6bnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_c3jhj")
theme_override_styles/hover = SubResource("StyleBoxTexture_1olq8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tnni")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgays")

[node name="Label" type="Label" parent="Control3/Control6"]
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = 232.0
offset_right = 293.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="Control3/Control6"]
texture_filter = 1
layout_mode = 0
offset_left = 304.0
offset_top = 240.0
offset_right = 328.0
offset_bottom = 270.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2etx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1tsdo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8wigu")
theme_override_styles/hover = SubResource("StyleBoxTexture_bsywa")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k5ib5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uleoq")

[connection signal="pressed" from="Control/Button" to="." method="_on_button_female_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_male_pressed"]
[connection signal="pressed" from="Control2/Button" to="." method="_on_button_filter_rape_off_pressed"]
[connection signal="pressed" from="Control2/Button2" to="." method="_on_button_filter_feral_off_pressed"]
[connection signal="pressed" from="Control2/Button3" to="." method="_on_button_filter_gore_off_pressed"]
[connection signal="pressed" from="Control2/Button4" to="." method="_on_button_filter_rape_on_pressed"]
[connection signal="pressed" from="Control2/Button5" to="." method="_on_button_filter_feral_on_pressed"]
[connection signal="pressed" from="Control2/Button6" to="." method="_on_button_filter_gore_on_pressed"]
[connection signal="pressed" from="Control2/Button7" to="." method="_on_button_start_game_pressed"]
[connection signal="pressed" from="Control3/Control/Button" to="." method="_on_button_stat_char_pressed_left"]
[connection signal="pressed" from="Control3/Control/Button2" to="." method="_on_button_stat_char_pressed_right"]
[connection signal="pressed" from="Control3/Control2/Button" to="." method="_on_button_stat_will_pressed_left"]
[connection signal="pressed" from="Control3/Control2/Button2" to="." method="_on_button_stat_will_pressed_right"]
[connection signal="pressed" from="Control3/Control3/Button" to="." method="_on_button_stat_inte_pressed_left"]
[connection signal="pressed" from="Control3/Control3/Button2" to="." method="_on_button_stat_inte_pressed_right"]
[connection signal="pressed" from="Control3/Control4/Button" to="." method="_on_button_stat_agil_pressed_left"]
[connection signal="pressed" from="Control3/Control4/Button2" to="." method="_on_button_stat_agil_pressed_right"]
[connection signal="pressed" from="Control3/Control5/Button" to="." method="_on_button_stat_stre_pressed_left"]
[connection signal="pressed" from="Control3/Control5/Button2" to="." method="_on_button_stat_stre_pressed_right"]
[connection signal="pressed" from="Control3/Control6/Button" to="." method="_on_button_stat_endu_pressed_left"]
[connection signal="pressed" from="Control3/Control6/Button2" to="." method="_on_button_stat_endu_pressed_right"]
